--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
               </p>
             <div class="row justify-content-center">
               <div class="column">
-                  <p class="mb-5"><a class="btn btn-large btn-light" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Chen_Local-to-Global_Registration_for_Bundle-Adjusting_Neural_Radiance_Fields_CVPR_2023_paper.pdf" role="button"  target="_blank">
+                  <p class="mb-5"><a class="btn btn-large btn-light" href= role="button"  target="_blank">
                     <i class="fa fa-file"></i> Paper</a> </p>
               </div>
               <div class="column">
-                  <p class="mb-5"><a class="btn btn-large btn-light" href="https://github.com/rover-xingyu/L2G-NeRF" role="button"  target="_blank">
+                  <p class="mb-5"><a class="btn btn-large btn-light" href= role="button"  target="_blank">
                     <i class="fa fa-github-alt"></i> Code</a> </p>
               </div>
             </div>
