--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2> MC-NeRF </h2>
+            <h2> MC-NeRF: Muti-Camera Neural Radiance Fields for Muti-Camera Image Acquisition Systems </h2>
             <h2> Neural Radiance Fields </h2>
-            <h4 style="color:#5a6268;">TVCG 2023</h4>
+            <h4 style="color:#5a6268;">Current state: Continue Updating(last time:2023.09.15)</h4>
             <hr>
             <h6> 
                 <a target="_blank">Yu Gao</a><sup>1</sup>,
