--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2> MC-NeRF: Muti-Camera Neural Radiance Fields for Muti-Camera Image Acquisition Systems </h2>
-            <h2> Neural Radiance Fields </h2>
+            <h2> MC-NeRF: Muti-Camera Neural Radiance Fields for</h2>
+            <h2> Muti-Camera Image Acquisition Systems </h2>
             <h4 style="color:#5a6268;">Current state: Continue Updating(last time:2023.09.15)</h4>
             <hr>
             <h6> 
