--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
               </p>
             <div class="row justify-content-center">
               <div class="column">
-                  <p class="mb-5"><a class="btn btn-large btn-light" href= role="button"  target="_blank">
+                  <p class="mb-5"><a class="btn btn-large btn-light" href="https://arxiv.org/abs/2309.07846" role="button"  target="_blank">
                     <i class="fa fa-file"></i> Paper</a> </p>
               </div>
               <div class="column">
-                  <p class="mb-5"><a class="btn btn-large btn-light" href= role="button"  target="_blank">
+                  <p class="mb-5"><a class="btn btn-large btn-light" href="https://github.com/SkylerGao/MC_NeRF" role="button"  target="_blank">
                     <i class="fa fa-github-alt"></i> Code</a> </p>
               </div>
             </div>
