--- a/index.html
+++ b/index.html
@@ -345,6 +345,57 @@
     </div>
   </section>
   <br>
+
+  <!-- Supplementary Experiments -->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+            <h3>Supplementary Experiments</h3>
+            <hr style="margin-top:0px">
+            <h4 style="margin-top:20px; margin-bottom:20px; color:#717980">Performance Comparison of Different Methods</h4>
+              <ul>
+                <li>
+                  <img class="img-fluid" src="image/Other Methods/NERF.gif">
+                </li>
+                <li>
+                  <img class="img-fluid" src="image/Other Methods/BARF.gif">
+                </li>
+                <li>
+                  <img class="img-fluid" src="image/Other Methods/L2G_Paper.gif">
+                </li>
+                <li>
+                  <img class="img-fluid" src="image/Other Methods/MC.gif">
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <img class="img-fluid" src="image/Other Methods/NERF-Depth.gif">
+                </li>
+                <li>
+                  <img class="img-fluid" src="image/Other Methods/BARF-Depth.gif">
+                </li>
+                <li>
+                  <img class="img-fluid" src="image/Other Methods/L2G_Depth_paper.gif">
+                </li>
+                <li>
+                  <img class="img-fluid" src="image/Other Methods/MC_Depth.gif">
+                </li>
+              </ul>
+              <table class="caption" style="width: 100%;">
+                <tr>
+                    <td style="width: 25%">NeRF</td>
+                    <td style="width: 25%">BARF</td>
+                    <td style="width: 25%">L2G_NeRF</td>
+                    <td style="width: 25%">MC-NeRF(ours)</td>
+                </tr>
+              </table>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br>
+  
   <!-- citing -->
   <div class="container">
     <div class="row ">
