--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="col-12">
             <h2> MC-NeRF: Muti-Camera Neural Radiance Fields for</h2>
             <h2> Muti-Camera Image Acquisition Systems </h2>
-            <h4 style="color:#5a6268;">Current state: Continue Updating(last time:2023.10.10)</h4>
+            <h4 style="color:#5a6268;">Current state: Continue Updating(last time:2023.11.10)</h4>
             <hr>
             <h6> 
                 <a target="_blank">Yu Gao</a><sup>1</sup>,
@@ -390,6 +390,34 @@
                     <td style="width: 25%">MC-NeRF(ours)</td>
                 </tr>
               </table>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br>
+
+    <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+            <h3>The variation of the camera's position and field of view</h3>
+            <hr style="margin-top:0px">
+            <h4 style="margin-top:20px; margin-bottom:20px; color:#717980">Ball Style</h4>
+                  <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
+                    <source src="image/ball.mp4" type="video/mp4">
+                  </video>
+            <h4 style="margin-top:20px; margin-bottom:20px; color:#717980">HalfBall Style</h4>
+                  <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
+                    <source src="image/halfball.mp4" type="video/mp4">
+                  </video>
+            <h4 style="margin-top:20px; margin-bottom:20px; color:#717980">Room Style</h4>
+                  <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
+                    <source src="image/room.mp4" type="video/mp4">
+                  </video>
+            <h4 style="margin-top:20px; margin-bottom:20px; color:#717980">Array Style</h4>
+                  <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
+                    <source src="image/array.mp4" type="video/mp4">
+                  </video>
         </div>
       </div>
     </div>
