--- a/index.html
+++ b/index.html
@@ -452,13 +452,13 @@
           <h3>Citation</h3>
           <hr style="margin-top:0px">
               <pre style="background-color: #e9eeef;padding: 1.25em 1.5em">
-<code>@misc{gao2023mcnerf,
-  title={MC-NeRF: Muti-Camera Neural Radiance Fields for Muti-Camera Image Acquisition Systems}, 
-  author={Yu Gao and Lutong Su and Hao Liang and Yufeng Yue and Yi Yang and Mengyin Fu},
-  year={2023},
-  eprint={2309.07846},
-  archivePrefix={arXiv},
-  primaryClass={cs.CV}
+<code>@misc{gao2024mcnerf,
+      title={MC-NeRF: Multi-Camera Neural Radiance Fields for Multi-Camera Image Acquisition Systems}, 
+      author={Yu Gao and Lutong Su and Hao Liang and Yufeng Yue and Yi Yang and Mengyin Fu},
+      year={2024},
+      eprint={2309.07846},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
 }</code></pre>
           <hr>
       </div>
